--- a/DNA/GDC_dna_seq/widgets/GDC_dna_seq/SomaticSniper/Dockerfiles/Dockerfile
+++ b/DNA/GDC_dna_seq/widgets/GDC_dna_seq/SomaticSniper/Dockerfiles/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:buster-slim AS builder
 RUN apt-get update && apt-get install -y build-essential git-core cmake zlib1g-dev libncurses-dev wget
 RUN wget -c https://github.com/genome/somatic-sniper/archive/v1.0.5.0.tar.gz -O - | tar -xz
-RUN cd somatic-sniper* && cmake . && make deps && make -j && make install && chmod +x /usr/local/bin/bam-somaticsniper
+RUN cd somatic-sniper* && cmake . && make deps && make -j && make install
 
 FROM debian:buster-slim
 MAINTAINER Hong Hung
