--- a/DNA/GDC_dna_seq/widgets/GDC_dna_seq/fastqc/Dockerfiles/Dockerfile
+++ b/DNA/GDC_dna_seq/widgets/GDC_dna_seq/fastqc/Dockerfiles/Dockerfile
@@ -1,6 +1,3 @@
-FROM ubuntu:18.04
-RUN apt-get update && apt-get -y install fastqc default-jre  libfindbin-libs-perl \
-    && apt-get autoclean -y \
-    && apt-get autoremove -y \
+FROM ubuntu:20.10
+RUN apt-get update && apt-get -y --no-install-recommends install fastqc \
     && rm -rf /var/lib/apt/lists/* 
- 
