--- a/DNA/GATK_germline_variant/widgets/GATK_germline_variant/Start/Dockerfiles/Dockerfile
+++ b/DNA/GATK_germline_variant/widgets/GATK_germline_variant/Start/Dockerfiles/Dockerfile
@@ -1,4 +1,4 @@
 FROM alpine:3.12.1
 MAINTAINER Hong Hung
-RUN apk update upgrade --no-cache && apk add bash jq && rm -rf /var/cache/apk* 
+RUN apk update upgrade --no-cache && apk add bash jq rsync && rm -rf /var/cache/apk* 
 COPY start.sh /usr/local/bin/.
