--- a/DNA/GATK_germline_variant/widgets/GATK_germline_variant/igv/Dockerfiles/Dockerfile
+++ b/DNA/GATK_germline_variant/widgets/GATK_germline_variant/igv/Dockerfiles/Dockerfile
@@ -4,7 +4,11 @@ ARG IGV_VERSION="2.9.2"
 # This flag is needed to render Java in Bwb
 ENV JAVA_TOOL_OPTIONS="-Dsun.java2d.xrender=false"
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends openjdk-11-jre unzip wget \
+    && apt-get install -y --no-install-recommends \
+        bash \
+        openjdk-11-jre \
+        unzip \
+        wget \
     && wget -nv https://data.broadinstitute.org/igv/projects/downloads/$(echo ${IGV_VERSION} | sed 's|.[0-9]\+$||')/IGV_Linux_${IGV_VERSION}_WithJava.zip \
     && unzip -q *.zip -x "*/jdk-11/*" \
     && rm *.zip \
@@ -13,6 +17,8 @@ RUN apt-get update \
                s|--add-exports java.desktop/sun.awt.windows=jide.common ||' IGV*/igv.args \
     && mv IGV*/* /usr/local/bin \
     && rmdir IGV* \
-    && apt-get purge --auto-remove -y unzip wget \
+    && apt-get purge --auto-remove -y \
+        unzip \
+        wget \
     && rm -rf /var/lib/apt/lists/*
-ENTRYPOINT ["igv.sh"]
+COPY start-igv.sh /usr/local/bin
