--- a/DNA/GATK_germline_variant/widgets/GATK_germline_variant/baserecalibrate/Dockerfiles/Dockerfile
+++ b/DNA/GATK_germline_variant/widgets/GATK_germline_variant/baserecalibrate/Dockerfiles/Dockerfile
@@ -1,4 +1,6 @@
-FROM biodepot/gatk:4.1.9.0__openjdk_8-jre-alpine__cb1b2f17
+FROM broadinstitute/gatk:4.1.9.0
+#FROM biodepot/gatk:4.1.9.0__openjdk_8-jre-alpine__cb1b2f17
 MAINTAINER Hong Hung
-RUN apk add --no-cache bash
-COPY recalibrate.sh /usr/local/bin/recalibrate.sh
+#RUN apk add --no-cache bash
+COPY *.sh /usr/local/bin/
+
