--- a/serverless/AWS_RNA_seq_UMI/widgets/AWS_RNA_seq_UMI/Merge/Dockerfiles/Dockerfile.build
+++ b/serverless/AWS_RNA_seq_UMI/widgets/AWS_RNA_seq_UMI/Merge/Dockerfiles/Dockerfile.build
@@ -1,4 +1,5 @@
-FROM ubuntu:18.04
+FROM ubuntu:20.04
+ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update  && apt-get install -y build-essential libboost-all-dev zlib1g-dev zlib1g git
 RUN git clone https://github.com/BioDepot/LINCS_RNAseq_cpp.git
 RUN cp -r LINCS_RNAseq_cpp/source /source
