--- a/RNA/Toil_RNA_Seq/cwl_examples/toil_rnaseq_cwl/rsem.yaml
+++ b/RNA/Toil_RNA_Seq/cwl_examples/toil_rnaseq_cwl/rsem.yaml
@@ -7,6 +7,6 @@ threads: 1
 probability: 0.5
 seed_len: 25
 frag_len_mean: -1.0
-rsem_bam: /data/Aligned.toTranscriptome.out.bam
+rsem_bam: /data/star_Aligned.toTranscriptome.out.bam
 rsem_header_path: /data/rsem_ref_hg38/hg38
 rsem_method: rsem
