--- a/RNA/Toil_RNA_Seq/cwl_examples/toil_rnaseq_cwl/star.yaml
+++ b/RNA/Toil_RNA_Seq/cwl_examples/toil_rnaseq_cwl/star.yaml
@@ -1,4 +1,4 @@
-volume_home: /home/ubuntu:/data
+volume_home: /mnt/data:/data
 volume_docker: /var/run/docker.sock:/var/run/docker.sock
 docker_image_star: quay.io/ucsc_cgl/star
 star_index_dir: /data/starIndex
