corrected the output name after aligning using STAR

--- a/RNA/Toil_RNA_Seq/cwl_examples/toil_rnaseq_cwl/rsem.yaml
+++ b/RNA/Toil_RNA_Seq/cwl_examples/toil_rnaseq_cwl/rsem.yaml
@@ -1,4 +1,4 @@
-volume_home: /mnt/data:/data
+volume_home: /home/ubuntu:/data
 volume_docker: /var/run/docker.sock:/var/run/docker.sock
 docker_image_rsem: quay.io/ucsc_cgl/rsem
 is_paired: --paired-end
