--- a/RNA/Toil_RNA_Seq/cwl_examples/toil_rnaseq_cwl/kallisto.yaml
+++ b/RNA/Toil_RNA_Seq/cwl_examples/toil_rnaseq_cwl/kallisto.yaml
@@ -1,4 +1,4 @@
-volume_home: /mnt/data:/data
+volume_home: /home/ubuntu:/data
 volume_docker: /var/run/docker.sock:/var/run/docker.sock
 docker_image_kallisto: varikmp/kallisto
 kallisto_method: quant
