--- a/RNA/Toil_RNA_Seq/cwl_examples/toil_rnaseq_cwl/toil.yaml
+++ b/RNA/Toil_RNA_Seq/cwl_examples/toil_rnaseq_cwl/toil.yaml
@@ -31,6 +31,6 @@ has_qualities: --no-qualities
 probability: 0.5
 seed_len: 25
 frag_len_mean: -1.0
-rsem_bam: /data/Aligned.toTranscriptome.out.bam
+rsem_bam: /data/star_Aligned.toTranscriptome.out.bam
 rsem_header_path: /data/rsem_ref_hg38/hg38
 rsem_method: rsem
